1999-11-06  lav

	* about.cc, about.h: export copyright string.
	* edit.cc, edit.h: print copyright on --version.
	* mainmenu.cc, user.cc: include about.h.
	* search.cc: specify help for search and replace.
	* le.hlp: help for search and replace.

1999-11-05  lav

	* search.cc: (ReplaceFound) fixed replace to \\. (reported by
	  <sen@adm.yar.ru>); insert unknown backslashed characters verbatim.
	* keymapdf.cc: few more sequences.

1999-10-31  lav

	* user.cc: (UserYankBlock) set REDISPLAY_ALL.
	* help.cc: read help from file by section tag.
	* block.cc: use new help; add help for write-block/read-block.
	* user.cc, options.cc, frames.cc, editcalc.cc: use new help.
	* le.1: describe block piping.
	* le.hlp: new file.
	* Makefile.am: remove ehelp.cc, add le.hlp.

1999-10-30  lav

	* keymap.cc: correct error handling in keymap file reading;
	  flushinp when we get an unknown sequence.
	* keymapdf.cc: more binding to terminfo keys; correct kHOM; bind new
	  actions.
	* keymap.h: more actions - yank-block and move-mark set.
	* keymapfn.c: more actions.
	* search.cc: use a TextPoint for block limit; this fixes replace
	  in the block.
	* textpoin.cc, textpoin.h: (ForcedLineCol) new method.
	* user.cc: move-mark functions.

1999-10-06  lav

	* edit.cc: add help line about --config; runtime bool check.
	* edit.h: redefine bool for curses.h if possible.

1999-09-08  lav

	* user.cc: do PreUserEdit in UserStartDragMark to deal with text mode.
	* mainmenu.cc: add drag-mark.
	* keymap.cc, keymap.h, keymapfn.cc: add start-drag-mark action.

1999-08-26  lav

	* edit.cc, edit.h, kern.cc, options.cc, options.h: add --config
	  option to specify ini file explicitly.

1999-07-20  lav

	* search.cc: fix backward search.

1999-07-18  lav

	* search.cc: support mmap in replace; speed up replace.
	* options.cc: fix typo.

1999-07-16  lav

	* search.cc: add $n and $x search modifiers for numeric and hex mode.
	  E.g. search for `$n 0x32 0x35 0x36' or `$x 32 35 36'.

1999-07-12  lav
